radio button alignment fix.

--- a/public/css/survey.css
+++ b/public/css/survey.css
@@ -134,21 +134,20 @@
     display: inline-block;
     position: relative;
     top: 5px;
-    margin: 0 5px 0 0;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     border-radius: 20px;
-    border: 2px solid #0051bf;
+    border: 1px solid #0051bf;
     background-color: transparent;
   }
   
   .radio-item input[type=radio]:checked + label:after {
     border-radius: 10px;
-    width: 11px;
-    height: 11px;
+    width: 10px;
+    height: 10px;
     position: absolute;
-    top: 12px;
-    left: 13px;
+    top: 10px;
+    left: 11px;
     content: " ";
     display: block;
     background: #ffffff;
